// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden animate-pulse rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden animate-pulse rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with additional classes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl p-8"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl p-8"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with fallback title 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-500"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Fallback Title
                </h2>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-500"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Fallback Title
              </h2>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with no thumbnail 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with subtitle and info 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex justify-between items-center gap-2.5"
                >
                  <p
                    class="truncate text-sm"
                  >
                    Subtitle
                  </p>
                </div>
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
                <p
                  class="text-gray-500 text-sm"
                >
                  Additional Info
                </p>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <div
                class="flex justify-between items-center gap-2.5"
              >
                <p
                  class="truncate text-sm"
                >
                  Subtitle
                </p>
              </div>
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
              <p
                class="text-gray-500 text-sm"
              >
                Additional Info
              </p>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with tags 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
              </div>
              <div
                class="flex flex-wrap gap-2"
              >
                <div
                  class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
                >
                  <span
                    class="contents"
                  >
                    Tag #1
                  </span>
                </div>
                <div
                  class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
                >
                  <span
                    class="contents"
                  >
                    Tag #2
                  </span>
                </div>
                <div
                  class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
                >
                  <span
                    class="contents"
                  >
                    Tag #3
                  </span>
                </div>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
              >
                <span
                  class="contents"
                >
                  Tag #1
                </span>
              </div>
              <div
                class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
              >
                <span
                  class="contents"
                >
                  Tag #2
                </span>
              </div>
              <div
                class="relative flex items-center justify-center px-3 py-2 text-sm font-medium leading-none whitespace-nowrap bg-primary-100 text-primary-700 rounded-md h-6"
              >
                <span
                  class="contents"
                >
                  Tag #3
                </span>
              </div>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`title > matches snapshot with status 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex justify-between items-center gap-2.5"
                >
                  <p
                    class="truncate text-sm"
                  >
                    Subtitle
                  </p>
                  <svg
                    aria-hidden="true"
                    class="size-4 text-primary-700"
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
                <p
                  class="text-gray-500 text-sm"
                >
                  Additional Info
                </p>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <div
                class="flex justify-between items-center gap-2.5"
              >
                <p
                  class="truncate text-sm"
                >
                  Subtitle
                </p>
                <svg
                  aria-hidden="true"
                  class="size-4 text-primary-700"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
              <p
                class="text-gray-500 text-sm"
              >
                Additional Info
              </p>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`title > matches snapshot with status and tooltips 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative hover:shadow-lg rounded-xl"
        data-testid="udp-dashboard-card"
      >
        <div
          class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
        >
          <a
            class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/dashboards/123"
          >
            <div
              class="overflow-hidden rounded-lg h-48 relative"
              data-testid="udp-thumbnail"
            >
              <svg
                class="size-full bg-neutral-100 fill-white absolute"
                data-testid="udp-thumbnail-alt"
                fill="currentColor"
                height="600"
                preserveAspectRatio="none"
                viewBox="0 0 800 600"
                width="800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="63"
                  width="722"
                  x="39"
                  y="38"
                />
                <rect
                  height="177"
                  width="348"
                  x="39"
                  y="127"
                />
                <rect
                  height="231"
                  width="722"
                  x="39"
                  y="330"
                />
                <rect
                  height="177"
                  width="348"
                  x="412"
                  y="127"
                />
              </svg>
              <img
                alt=""
                class="absolute"
                data-testid="udp-thumbnail-image"
                src="/dashboard-thumbnail-baumradar.svg"
              />
              <div
                class="absolute size-full bg-primary-200 opacity-[33%]"
                data-testid="udp-thumbnail-overlay"
              />
            </div>
            <div
              class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex justify-between items-center gap-2.5"
                >
                  <p
                    class="truncate text-sm"
                  >
                    Subtitle
                  </p>
                  <div
                    class="w-fit"
                    data-testid="flowbite-tooltip-target"
                  >
                    <svg
                      aria-hidden="true"
                      class="size-4 text-primary-700"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="absolute z-10 inline-block rounded-lg px-3 py-2 text-sm font-medium shadow-xs transition-opacity duration-300 invisible opacity-0 bg-gray-900 text-white dark:bg-gray-700"
                    data-floating-ui-focusable=""
                    data-testid="flowbite-tooltip"
                    id="_r_0_"
                    role="tooltip"
                    style="position: absolute; top: 0px; left: 0px;"
                    tabindex="-1"
                  >
                    <div
                      class="relative z-20"
                    >
                      Veröffentlicht
                    </div>
                    <div
                      class="absolute z-10 h-2 w-2 rotate-45 bg-gray-900 dark:bg-gray-700"
                      data-testid="flowbite-tooltip-arrow"
                      style="bottom: -4px;"
                    >
                       
                    </div>
                  </div>
                </div>
                <h2
                  class="font-bold text-lg truncate"
                >
                  Test Title
                </h2>
                <p
                  class="text-gray-500 text-sm"
                >
                  Additional Info
                </p>
              </div>
            </div>
          </a>
        </div>
        <label
          class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
          data-testid="udp-dashboard-card-favorite"
        >
          <input
            class="sr-only peer"
            tabindex="-1"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative hover:shadow-lg rounded-xl"
      data-testid="udp-dashboard-card"
    >
      <div
        class="h-full bg-white border border-gray-100 cursor-pointer shadow-md active:shadow-none rounded-xl"
      >
        <a
          class="flex flex-col gap-1.5 p-1.5 h-full focus:rounded-lg focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          href="/dashboards/123"
        >
          <div
            class="overflow-hidden rounded-lg h-48 relative"
            data-testid="udp-thumbnail"
          >
            <svg
              class="size-full bg-neutral-100 fill-white absolute"
              data-testid="udp-thumbnail-alt"
              fill="currentColor"
              height="600"
              preserveAspectRatio="none"
              viewBox="0 0 800 600"
              width="800"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="63"
                width="722"
                x="39"
                y="38"
              />
              <rect
                height="177"
                width="348"
                x="39"
                y="127"
              />
              <rect
                height="231"
                width="722"
                x="39"
                y="330"
              />
              <rect
                height="177"
                width="348"
                x="412"
                y="127"
              />
            </svg>
            <img
              alt=""
              class="absolute"
              data-testid="udp-thumbnail-image"
              src="/dashboard-thumbnail-baumradar.svg"
            />
            <div
              class="absolute size-full bg-primary-200 opacity-[33%]"
              data-testid="udp-thumbnail-overlay"
            />
          </div>
          <div
            class="flex flex-col px-3.5 py-3 gap-2.5 text-gray-900"
          >
            <div
              class="flex flex-col"
            >
              <div
                class="flex justify-between items-center gap-2.5"
              >
                <p
                  class="truncate text-sm"
                >
                  Subtitle
                </p>
                <div
                  class="w-fit"
                  data-testid="flowbite-tooltip-target"
                >
                  <svg
                    aria-hidden="true"
                    class="size-4 text-primary-700"
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="absolute z-10 inline-block rounded-lg px-3 py-2 text-sm font-medium shadow-xs transition-opacity duration-300 invisible opacity-0 bg-gray-900 text-white dark:bg-gray-700"
                  data-floating-ui-focusable=""
                  data-testid="flowbite-tooltip"
                  id="_r_0_"
                  role="tooltip"
                  style="position: absolute; top: 0px; left: 0px;"
                  tabindex="-1"
                >
                  <div
                    class="relative z-20"
                  >
                    Veröffentlicht
                  </div>
                  <div
                    class="absolute z-10 h-2 w-2 rotate-45 bg-gray-900 dark:bg-gray-700"
                    data-testid="flowbite-tooltip-arrow"
                    style="bottom: -4px;"
                  >
                     
                  </div>
                </div>
              </div>
              <h2
                class="font-bold text-lg truncate"
              >
                Test Title
              </h2>
              <p
                class="text-gray-500 text-sm"
              >
                Additional Info
              </p>
            </div>
          </div>
        </a>
      </div>
      <label
        class="group inline-flex rounded text-primary-500 cursor-pointer w-8 h-8 absolute top-3 right-3 bg-white p-1"
        data-testid="udp-dashboard-card-favorite"
      >
        <input
          class="sr-only peer"
          tabindex="-1"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-gray-500 group-hover:text-current peer-checked:text-current peer-checked:[&_path]:fill-current"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </svg>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
